--- a/templates/forecast.html
+++ b/templates/forecast.html
@@ -8,30 +8,64 @@ integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUT
 crossorigin=""></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://cdn.plot.ly/plotly-latest.min.js" charset="utf-8"></script>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/forecast.css') }}">
+<script src = "{{url_for('static', filename='js/forecast.js')}}">
+
+</script>
 <title>Forecast</title>
 {% endblock %}
 
 {% block content %}
-<div class= "leftBar">
-  <h1>Set your location on the right and click forecast to get your 3-day solar radiation prediction </h1>
-  <form>
-    <input id = "val" type="hidden" name="location" value="">
-    <button id = "forecast" class = "forecast" type="submit" name="button">Forecast</button>
-  </form>
-  <hr>
-  <div class= "predictions">
-    <p id = "day1" class = "val">0</p><p class = "label">kW/m<sup>2</sup></p>
-    <h5></h5>
-    <hr>
-    <p id = "day2" class = "val">0</p><p class = "label">kW/m<sup>2</sup></p>
-    <h5></h5>
-    <hr>
-    <p id = "day3" class = "val">0</p><p class = "label">kW/m<sup>2</sup></p>
-    <h5></h5>
-  </div>
-</div>
 <div id = "mapid">
+</div>
+<div class="user-block">
+  <div class="left-side">
+    <div class="instructions">
+      <span>Select a location above <br> and then click forecast below</span>
+    </div>
+    <div class="forecast-button">
+      <form>
+        <input id = "val" type="hidden" name="location" value="">
+        <button id = "forecast" class = "btn" type="submit" name="button">Forecast</button>
+      </form>
+    </div>
+  </div>
+  <div class="right-side">
+    <div class="day">
+      <div>
+        <span class = "date"></span>
+      </div>
+      <div>
+        <span id = "day1" class = "val">0</span>
+      </div>
+      <div>
+        <span class = "label">kW/m<sup>2</sup></span>
+      </div>
+    </div>
+    <div class="day">
+      <div>
+        <span class = "date"></span>
+      </div>
+      <div>
+        <span id = "day2" class = "val">0</span>
+      </div>
+      <div>
+        <span class = "label">kW/m<sup>2</sup></span>
+      </div>
+    </div>
+    <div class="day">
+      <div>
+        <span class = "date"></span>
+      </div>
+      <div>
+        <span id = "day3" class = "val">0</span>
+      </div>
+      <div>
+        <span class = "label">kW/m<sup>2</sup></span>
+      </div>
+    </div>
+  </div>
 </div>
 
 <script type="text/javascript">
@@ -60,51 +94,10 @@ crossorigin=""></script>
     }
     marker = L.marker(e.latlng, {icon: greenIcon}).addTo(map);
     latitude = Math.floor(e.latlng.lat);
-    longitude = Math.floor(e.latlng.lng);
+    latitude = e.latlng.lat.toFixed(2).toString();
+    longitude = e.latlng.lng.toFixed(2).toString();
     document.getElementById('val').value =
-      JSON.stringify({lat: latitude.toString(), long: longitude.toString()});
+      JSON.stringify({lat: latitude, long: longitude});
   });
-
-  var now = moment();
-  var today = now.format('MMM Do, YYYY');
-  var tomorrow = now.add(1, 'days').format('MMM Do, YYYY');
-  var day2 = now.add(1, 'days').format('MMM Do, YYYY');
-  var day3 = now.add(1, 'days').format('MMM Do, YYYY');
-  var dates = [tomorrow, day2, day3];
-  var tags = document.getElementsByTagName("h5");
-  for (var i = 0; i < tags.length; i++){
-    tags[i].innerHTML = dates[i];
-  }
-
-  function animateValue(id, start, end, duration) {
-      var range = end - start;
-      var current = start;
-      var increment = 1;
-      var stepTime = Math.abs(Math.floor(duration / range));
-      var obj = document.getElementById(id);
-      var timer = setInterval(function() {
-          current += increment;
-          obj.innerHTML = current;
-          if (current >= end) {
-              clearInterval(timer);
-          }
-      }, stepTime);
-  }
-
-  $(function(){
-    $('#forecast').bind('click', function(){
-      $.getJSON('/predict', {
-        a: $('input[name = "location"]').val()
-      }, function(data){
-        if (data["day1"] == "ERROR"){
-          return;
-        }
-        animateValue("day1", 0, data["day1"], 1000)
-        animateValue("day2", 0, data["day2"], 1000)
-        animateValue("day3", 0, data["day3"], 1000)
-      });
-      return false;
-    })
-  })
 </script>
 {% endblock %}
