--- a/templates/menu.html
+++ b/templates/menu.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/menu.css')}}">
     <script src = "{{url_for('static', filename='js/menu.js')}}"></script>
     {% block css %}{% endblock %}
@@ -30,6 +31,10 @@
       <a href="/">Home</a>
       <a href="/about">About</a>
       <a href="/forecast">Forecast</a>
+      <div class="social-media">
+        <a href="https://github.com/ppatel1994"><i class = "fa fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/parth-patel-468829b8"><i class = "fa fa-linkedin"></i></a>
+      </div>
     </div>
   </body>
 </html>
